# gravity-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  graphics.hh  gravity-simulation.cu  gravity_simulation.cu  particles.hh  randomize.hh  solar-system-01.csv  utility.hh
csv/: klemperer-rosette-four-body.csv  simple-two-body-test.csv  solar-system-01.csv  solar-system-02.csv  two-body-wave.csv
